--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>React Media Server</title>
 
     <!-- FontAwesome -->
     <link href="%PUBLIC_URL%/lib/fontawesome/css/all.css?" rel="stylesheet" />
-    
+
+    <!-- JavaXT -->
+    <link href="%PUBLIC_URL%/lib/javaxt/javaxt-dark-theme.css" rel="stylesheet" />
+
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+  <body></body>
 </html>
